--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         <img src="https://openclipart.org/download/256933/blackwhitepaperstack.svg">
         <img src="https://bestclipartblog.com/storage/upload/scissors-clip-art/scissors-clip-art-1.jpg">  
       </div>
-        <input placeholder="Rock, Paper or Scissor">
+      
+        <input class="player" placeholder="Rock, Paper or Scissor">
         <button class="rps" id="Click">Press</button>
       <div id="result"> </div>
-    
+        <p id="Winner">You win!</p>
     </div>
 
   </body>
