--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
         <button class="rps" id="Click">Press</button>
       </div>
       
-      <div id="result"> </div>
+      <div id="result"></div>
+      <p id="computerChoice"></p>
         <p id="Winner"></p>
+        
       </div>
     </div>
   </body>
