The html and css for now

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>Rock, Paper, Scissor Game</header>
     <div>
-      <h1>Instructions</h1>
+      <h1 id= "instructions">Instructions</h1>
       <p>Click one of the following images below and hope to win.</p>
     </div>
       <!-- TASK 1: In the div below. 
