Scoring system works.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
       </div>
       
       <h1 id="results"></h1>
-      <h1 id="record"></h1>
-        
+      <div id= "score">
+        <h1>Player: <span id = "playerWin"></span></h1>
+        <h1>Computer: <span id = "computerWin"></span></h1>
+      </div>  
     </div>
   </body>
 
